--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div id="header">
   <div class="container">
     <nav class="navbar navbar-expand-lg" style="width: 100%">
-      <a class="navbar-brand" href="/"><%= image_tag "logo.png" %></a>
+      <a class="navbar-brand" href="/"><%= image_tag "logo-dark.png" %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
