--- a/app/assets/stylesheets/main-navbar.css
+++ b/app/assets/stylesheets/main-navbar.css
@@ -49,7 +49,8 @@
   margin-top: 4px;
 } */
 #header {
-  background: #12263f;
+  background: #fff;
+  border-bottom: 1px solid var(--border-color)
 }
 
 #header .navbar {
@@ -58,7 +59,7 @@
 
 #header a {
   padding: 5px 10px;
-  color: #fff;
+  color: #1c4270;
   margin-left: 5px;
 }
 
@@ -67,7 +68,8 @@
 }
 
 #header a.active {
-  background: #1c4270;
+  background: #f2f3f8;
+  color: #1c4270;
   border-radius: 4px;
 }
 
