--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -11,9 +11,8 @@
     <div class="col-md-12">
       <div class="card-block card-campaign-item mb-2">
         <div class="row">
-          <div class="col-md-5">
-            <span class="text-muted">Name</span>
-            <p><a href="/campaigns/<%= campaign.slug %>"><%= campaign.name.titleize %></a></p>
+          <div class="col-md-5 pt-2">
+            <p><a style="font-size: 1.2em" href="/campaigns/<%= campaign.slug %>"><%= campaign.name.titleize %></a></p>
           </div>
           <div class="col-md-4">
             <span class="text-muted">Updated</span>
