--- a/app/views/databases/index.html.erb
+++ b/app/views/databases/index.html.erb
@@ -1,7 +1,5 @@
 <h2 class="headline-title float-left mb-3">
-  <% if ActionController::Base.helpers.resolve_asset_path("apps/#{@app.slug}.png").present? %>
-    <%= image_tag("apps/#{@app.slug}.png", class: 'app-image-headline') %>
-  <% end %>
+  <%= image_tag("/apps/#{@app.slug}.png", class: 'app-image-headline') %>
   <%= @app.name %>
 </h2>
 
@@ -10,38 +8,30 @@
 </div>
 
 <hr />
-
-<div class="table-simple" id="animate-wrapper">
-  <table class="table">
-    <thead>
-      <tr>
-        <th class="table-name">Name</th>
-        <th class="table-total">Rows</th>
-        <th class="table-url">Webhook URL</th>
-        <th class="table-total">Zapier</th>
-        <th style="width: 50px"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @databases.each do |database| %>
-        <tr>
-          <td style="font-size: 1.08em">
-            <a href="/campaigns/<%= @campaign.slug %>/<%= @app.slug %>/<%= database.slug %>"><%= database.name.titleize %></a>
-          </td>
-          <td class="table-total text-center">
-            <%= number_to_human(Request.where(database_id: database.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %>
-          </td>
-          <td class="table-url">
-            <input class="form-control form-control-sm click-to-copy" value="<%= "#{request.base_url}/~/#{@campaign.slug}/#{@app.slug}/#{database.slug}" %>" />
-          </td>
-          <td class="table-total">
+<div class="row">
+  <% @databases.each do |database| %>
+    <div class="col-md-12">
+      <div class="card-block card-campaign-item mb-2">
+        <div class="row">
+          <div class="col-md-5 pt-2">
+            <p><a style="font-size: 1.2em" href="/campaigns/<%= @campaign.slug %>/<%= @app.slug %>/<%= database.slug %>"><%= database.name.titleize %></a></p>
+          </div>
+          <div class="col-md-4">
+            <span class="text-muted">Updated</span>
+            <p class="text-small text-muted pt-1"><%= time_ago_in_words(database.created_at).capitalize %> ago</p>
+          </div>
+          <div class="col-md-1">
+            <span class="text-muted">Rows</span>
+            <p><%= number_to_human(Request.where(database_id: database.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %></p>
+          </div>
+          <div class="col-md-1 pt-2 text-center">
             <% if database.connected.present? %>
-              <strong class="text-muted"><i class="fas fa-check-circle mr-1" style="color: #a6ca46"></i></strong>
+              <strong class="text-muted"><i class="fas fa-check-circle mr-1" style="font-size: 1.2em;padding-top: 5px;color: #eaebf0"></i></strong>
             <% else %>
-              <a href="https://zapier.com/zapbook/create/<%= @app.zapierapi %>/WebHookAPI" target="_blank" class="btn btn-sm btn-zapier btn-block">Connect</a>
+              <a href="https://zapier.com/zapbook/create/<%= @app.zapierapi %>/WebHookAPI" target="_blank" class="btn btn-sm btn-zapier">Connect</a>
             <% end %>
-          </td>
-          <td class="text-right">
+          </div>
+          <div class="col-md-1 text-right">
             <div class="dropdown dropleft">
               <a href="#" role="button" class="dotted-menu" id="campaign-edit-list-<%= database.slug %>" data-toggle="dropdown">
                 <i class="fas fa-ellipsis-v"></i>
@@ -51,11 +41,12 @@
                 <a class="dropdown-item text-muted" href="/edit/<%= @campaign.slug %>/<%= @app.slug %>/<%= database.slug %>" data-remote="true" data-toggle="modal" data-target="#modal-window"><i class="far fa-edit mr-1"></i> Edit</a>
                 <%= link_to raw('<i class="far fa-trash-alt mr-1"></i> Delete'), [@campaign, @app, database], method: :delete, data: { confirm: 'Are you sure this will also delete all associated records?' }, class: 'dropdown-item text-muted' %>
               </div>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 <%= will_paginate @databases, class: 'table_pagination mt-3 mb-3' %>
