--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row" id="animate-wrapper">
   <div class="col-md-3">
-    <%= render(StatisticComponent, name: 'Rows', total: @all_requests, stat: false, prepend: false, append: false) %>
+    <%= render(StatisticComponent, name: 'Records', total: @all_requests, stat: false, prepend: false, append: false) %>
   </div>
   <div class="col-md-3 dashboard-extra-stat">
     <%= render(StatisticComponent, name: 'Campaigns', total: @all_campaigns, stat: false, prepend: false, append: false) %>
