--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -20,10 +20,12 @@
           <option <% if @settings.date_format == '%b %d, %m - %l:%M %p' %>selected<% end %> value="%b %d, %m - %l:%M %p">Month Day, Year  - HH:MM PM (abbr.)</option>
         </select>
       </div>
-      <div class="col-md-12">
-        <label>White Label Logo URL</label>
-        <input type="text" name="settings[logo]" value="<%= @settings.logo %>" placeholder="Change the CampaignVault logo for all users." class="form-control">
-      </div>
+      <% if current_user.id == 1 %>
+        <div class="col-md-12">
+          <label>**Admin Only** Logo URL</label>
+          <input type="text" name="settings[logo]" value="<%= @settings.logo %>" placeholder="Change the CampaignVault logo for all users." class="form-control">
+        </div>
+      <% end %>
     </div>
     <br>
     <div class="card-block-footer clearfix">
