--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,20 +1,24 @@
 <%= form_with(model: users, local: true, html: {autocomplete: 'off'}) do |f| %>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: 'form-control', autocomplete: 'off' %>
-      </div>
+  <div class="modal-body">
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.email_field :email, required: true, autofocus: true, class: 'form-control' %>
     </div>
-    <div class="col-md-6">
+    <% if editing == false %>
       <div class="form-group">
         <%= f.label :password %>
-        <%= f.password_field :password, required: true, autocomplete: "new-password", class: 'form-control', autocomplete: 'off' %>
+        <%= f.password_field :password, required: true, class: 'form-control' %>
       </div>
+    <% end %>
+    <div class="form-group">
+      <%= f.label :role %>
+      <%= f.select :role, [['User', 3], ['Collaborator', 2], ['Admin', 1]],  {},  {class: 'form-control'} %>
     </div>
   </div>
-  <br>
-  <div class="card-block-footer clearfix">
-    <button class="btn btn-primary float-right">Save</button>
+  <div class="modal-footer">
+    <% if editing == true %>
+      <%= link_to 'Delete', users, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-secondary mr-2' %>
+    <% end %>
+    <button class="btn btn-primary">Save</button>
   </div>
 <% end %>
