--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<%= link_to 'New User', '/users/new', class: 'btn btn-warning float-right' %>
-<h2 class="headline-title">Users</h2>
+<%= link_to raw('<i class="fas fa-plus mr-1"></i> Add User'), '/users/new', class: 'btn btn-primary float-right', remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+<h2 class="headline-title">Users <small class="ml-2 text-muted font-weight-bold" style="font-size: 0.6em">**Admin Only**</small></h2>
 <hr />
 
 <div class="table-simple">
@@ -8,8 +8,11 @@
       <tr>
         <th>Email</th>
         <th>Role</th>
+        <th class="table-total">Campaigns</th>
+        <th class="table-total">Apps</th>
+        <th class="table-total">Databases</th>
+        <th class="table-total">Records</th>
         <th class="table-total">Logins</th>
-        <th class="table-control"></th>
         <th class="table-control"></th>
       </tr>
     </thead>
@@ -18,10 +21,13 @@
       <% @users.each do |user| %>
         <tr>
           <td><%= user.email %></td>
-          <td><% if user.id == 1 %>Admin<% else %>Collaborator<% end %></td>
+          <td><% if user.role == 1 %>Admin<% elsif user.role == 2 %>Collaborator<% elsif user.role == 3 %>User<% end %></td>
+          <td class="table-total text-center">0</td>
+          <td class="table-total text-center">0</td>
+          <td class="table-total text-center">0</td>
+          <td class="table-total text-center">0</td>
           <td class="table-total text-center"><%= user.sign_in_count %></td>
-          <td><a href="<% if user.id == 1 %>/account<% else %>/users/edit/<%= user.id %><% end %>" class="btn btn-sm btn-block btn-outline-secondary">Edit</a></td>
-          <td><% if user.id != 1 %><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-block btn-outline-secondary' %><% end %></td>
+          <td><a href="<% if user.id == 1 %>/account<% else %>/users/edit/<%= user.id %><% end %>" class="btn btn-sm btn-block btn-outline-secondary" data-remote="true" data-toggle="modal" data-target="#modal-window"><% if user.id == 1 %>Account<% else %>Edit<% end %></a></td>
         </tr>
       <% end %>
     </tbody>
