--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -3,7 +3,7 @@
   <div class="input-group-append">
     <select class="custom-select" id="searchDB" style="display:">
       <option value="" disabled selected hidden>Select a Database</option>
-      <% App.order(id: :desc).all.each do |app| %>
+      <% App.order(id: :desc).where(user_id: current_user).each do |app| %>
         <option value="<%= app.slug %>"><%= app.name %></option>
       <% end %>
     </select>
