--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,4 +23,4 @@
 
 <hr />
 
-<%= render(ChartComponent, title: 'All Activity', graph: @all_activity) %>
+<%= render(ChartComponent, title: 'All Activity', graph: @graph_all_activity) %>
