--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <h2 class="headline-title">Users <small class="ml-2 text-muted font-weight-bold" style="font-size: 0.6em">**Admin Only**</small></h2>
 <hr />
 
-<div class="table-simple">
+<div class="table-simple" id="animate-wrapper">
   <table class="table">
     <thead>
       <tr>
