--- a/app/views/users/edit.js.erb
+++ b/app/views/users/edit.js.erb
@@ -1,2 +1,5 @@
 $("#modal-window").html("<%= escape_javascript(render 'users/edit') %>")
 $('#modal-window').modal('toggle')
+if ($('select#user_role').val() == '3') {
+  $('#optional_limits').show()
+}
