--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,19 +18,19 @@
       <div class="row">
         <div class="col-sm-6 form-group">
           <%= f.label :campaign_limit %>
-          <%= f.number_field :campaign_limit, required: true, class: 'form-control', placeholder: '0' %>
+          <%= f.number_field :campaign_limit, class: 'form-control', placeholder: '0' %>
         </div>
         <div class="col-sm-6 form-group">
           <%= f.label :app_limit %>
-          <%= f.number_field :app_limit, required: true, class: 'form-control', placeholder: '0' %>
+          <%= f.number_field :app_limit, class: 'form-control', placeholder: '0' %>
         </div>
         <div class="col-sm-6 form-group">
           <%= f.label :database_limit %>
-          <%= f.number_field :database_limit, required: true, class: 'form-control', placeholder: '0' %>
+          <%= f.number_field :database_limit, class: 'form-control', placeholder: '0' %>
         </div>
         <div class="col-sm-6 form-group">
           <label>Record limit</label>
-          <%= f.number_field :request_limit, required: true, class: 'form-control', placeholder: '0' %>
+          <%= f.number_field :request_limit, class: 'form-control', placeholder: '0' %>
         </div>
         <div class="col-sm-12">
           <p class="text-small text-muted">Leaving blank or 0 will equal unlimited.</p>
