--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,2 +1,3 @@
 $("#modal-window").html("<%= escape_javascript(render 'users/new') %>")
 $('#modal-window').modal('toggle')
+$('#optional_limits').show()
