--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,7 +1,9 @@
 <h2 class="headline-title float-left"><%= @campaign.name %></h2>
 
 <div class="webhook-options float-right clearfix mb-3">
-  <%= link_to raw('<i class="fas fa-plus mr-1"></i> Add App'), "/new/#{@campaign.slug}/app", {remote: true, class: 'btn btn-primary', 'data-toggle':  "modal", 'data-target': '#modal-window'}  %>
+  <% if !check_app_limit() %>
+    <%= link_to raw('<i class="fas fa-plus mr-1"></i> Add App'), "/new/#{@campaign.slug}/app", {remote: true, class: 'btn btn-primary', 'data-toggle':  "modal", 'data-target': '#modal-window'}  %>
+  <% end %>
 </div>
 
 <hr>
