--- a/app/views/shared/_table_controls.html.erb
+++ b/app/views/shared/_table_controls.html.erb
@@ -6,6 +6,7 @@
     <button class="btn btn-sm btn-outline-light" id="table-selectAll"><i class="fas fa-check-circle mr-0"></i></button>
     <button class="btn btn-sm btn-outline-light" id="table-deselectAll"><i class="far fa-check-circle mr-0"></i></button>
     <button class="btn btn-sm btn-outline-light" id="table-deleteSelected"><i class="fas fa-trash-alt mr-0"></i></button>
+    <button class="btn btn-sm btn-outline-light" id="table-editColumns"><i class="fas fa-table mr-1"></i> Table Columns</button>
     <select id="table-show-amount" class="form-control form-control-sm mr-3" style="width: 150px;display:inline-block">
       <option value="?per_page=25">25 Per Page</option>
       <option value="?per_page=50">50 Per Page</option>
