token for webhook url

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -11,6 +11,8 @@
 
 <hr />
 
+<p class="text-small text-muted"><i class="fas fa-globe mr-1"></i> <span><%= "#{request.base_url}/~/#{current_user.token}/#{@campaign.slug}/#{@app.slug}/#{@database.slug}" %></span></p>
+
 <div id="animate-wrapper">
   <div class="row">
     <div class="col-md-12">
