--- a/app/views/databases/new.js.erb
+++ b/app/views/databases/new.js.erb
@@ -1,2 +1,5 @@
 $("#modal-window").html("<%= escape_javascript(render 'databases/new') %>")
 $('#modal-window').modal('toggle')
+setTimeout(function() {
+  $('#modal-window form input[type=text]').first().select()
+}, 800)
