--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,3 +1,6 @@
 $("#modal-window").html("<%= escape_javascript(render 'users/new') %>")
 $('#modal-window').modal('toggle')
 $('#optional_limits').show()
+setTimeout(function() {
+  $('#modal-window form input[type=email]').first().select()
+}, 800)
