--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,13 +191,13 @@ form label {
 }
 
 .click-to-copy {
-  width: 100%;
+  /* width: 100%;
   border: none;
   border-radius: 4px;
   font-size: 1em;
   background: none;
   font-weight: 400;
-  color: #607aa0
+  color: #607aa0 */
 }
 
 #notice.notification {
