no more collaborator

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,7 @@
     <% end %>
     <div class="form-group">
       <%= f.label :role %>
-      <%= f.select :role, [['User', 3], ['Collaborator', 2], ['Admin', 1]],  {},  {class: 'form-control'} %>
+      <%= f.select :role, [['User', 3], ['Admin', 1]],  {},  {class: 'form-control'} %>
     </div>
     <div class="hide" id="optional_limits">
       <div class="row">
