--- a/app/views/requests/_new_total.html.erb
+++ b/app/views/requests/_new_total.html.erb
@@ -156,7 +156,9 @@
             </div>
           <% else %>
             <div class="col-md-12">
-              <p>This database has no data yet.</p>
+              <div class="card-block text-muted text-center p-4" style="font-size: 1.3em;background: none">
+                <p class="mb-0">This database has no data yet.</p>
+              </div>
             </div>
           <% end %>
         </div>
