--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -3,11 +3,11 @@
 <div class="card-block has-footer" id="animate-wrapper">
   <%= form_with(model: @settings, remote: true, html: {autocomplete: 'off'}) do |form| %>
     <div class="row">
-      <div class="col-md-6 mb-4">
+      <div class="col-md-12 mb-4">
         <label>Timezone</label>
         <%= time_zone_select("settings", "timezone", nil, {default: "Eastern Time (US & Canada)"}, {class: 'form-control'}) %>
       </div>
-      <div class="col-md-6 mb-4">
+      <!-- <div class="col-md-6 mb-4">
         <label>Date Format</label>
         <select name="settings[date_format]" class="form-control">
           <option <% if @settings.date_format == '%m/%d/%y - %l:%M %p' %>selected<% end %> value="%m/%d/%y - %l:%M %p">MM/DD/YY - HH:MM PM</option>
@@ -19,7 +19,7 @@
           <option <% if @settings.date_format == '%b %d, %m' %>selected<% end %> value="%b %d, %m">Month Day, Year (abbr.)</option>
           <option <% if @settings.date_format == '%b %d, %m - %l:%M %p' %>selected<% end %> value="%b %d, %m - %l:%M %p">Month Day, Year  - HH:MM PM (abbr.)</option>
         </select>
-      </div>
+      </div> -->
       <% if current_user.id == 1 %>
         <div class="col-md-12">
           <h4>Admin Only</h4>
